# tcode

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  install-from-source.sh  install.sh  plan.md  tool-permission-design.md
.github/workflows/: release.yml
auth/: Cargo.toml  README.md
auth/src/: lib.rs  token_storage_tests.rs  usage.rs
auth/src/claude/: mod.rs  usage.rs
auth/src/openai/: mod.rs  usage.rs
browser-server/: Cargo.toml  README.md
browser-server/examples/: web_fetch.rs
browser-server/src/: auth.rs  browser_tests.rs  error.rs  handler.rs  lib.rs  main.rs  web_fetch_tests.rs
browser-server/src/browser/: mod.rs  wait-for-idle.js
browser-server/src/web_fetch/: extract-content.js  mod.rs
browser-server/src/web_search/: extract-search-results.js  mod.rs
docs/: 01-getting-started.md  02-configuration.md  03-commands.md  04-keybindings.md  05-neovim.md  06-browser.md  07-permissions.md  08-remote.md
examples/: openai_chat.rs  openai_tools.rs
llm-rs/: Cargo.toml  README.md
llm-rs-macros/: Cargo.toml  README.md
llm-rs-macros/src/: lib.rs
llm-rs-server/: Cargo.toml  README.md
llm-rs-server/src/: auth.rs  auth_tests.rs  claude_auth.rs  config.rs  convert.rs  convert_tests.rs  error.rs  handler.rs  handler_tests.rs  lib.rs  main.rs  stream.rs  test_helpers.rs  types.rs  types_tests.rs
llm-rs/examples/: claude_tools.rs  conversation.rs  openai_chat.rs  openai_tools.rs  openrouter_reasoning.rs
llm-rs/src/: conversation.rs  conversation_tests.rs  image.rs  image_tests.rs  lib.rs  llm_tests.rs  media.rs  media_tests.rs  permission.rs  permission_tests.rs  skill.rs  skill_tests.rs  tool.rs  tool_tests.rs
llm-rs/src/llm/: bedrock.rs  bedrock_tests.rs  claude.rs  mod.rs  openai.rs  openai_common.rs  openai_tests.rs  openrouter.rs  openrouter_tests.rs  sse.rs
lsp-client/: Cargo.toml  README.md
lsp-client/src/: config.rs  config_tests.rs  lib.rs  manager.rs  server.rs  transport.rs  transport_tests.rs
src/: conversation.rs  lib.rs  llm.rs  tool.rs  tool_tests.rs
src/llm/: mod.rs  openai.rs
tcode/: Cargo.toml  README.md  build.rs  poc.md  readme.md
tcode-runtime/: Cargo.toml
tcode-runtime/src/: bootstrap.rs  bootstrap_tests.rs  config.rs  fts.rs  lib.rs  protocol.rs  server.rs  server_tests.rs  session.rs  session_tests.rs  system_prompt.rs  system_prompt_tests.rs
tcode-web/: Cargo.toml  README.md  api.md  poc.md  todo.md  workflow.md
tcode-web/frontend/: index.html  package-lock.json  package.json  stage7-validation.mjs  tsconfig.json  vite.config.ts
tcode-web/frontend/src/: api.ts  config.ts  env.d.ts  formatting.ts  image-processing.ts  image-types.ts  main.ts  markdown.ts  media-types.ts  messages.ts  router.ts  stream-event-batcher.ts  styles.css  timeline-cache-manager.ts  timeline-cache.ts  timeline-render-helpers.ts  timeline-store.ts  tool-args.ts  types.ts
tcode-web/frontend/src/components/: add-permission-form.ts  composer.ts  manage-conversations.ts  permission-tree.ts  session-view.ts  subagent-view.ts  tcode-app.ts  timeline.ts  tool-call-view.ts
tcode-web/src/: add_web_user.rs  config.rs  config_tests.rs  lib.rs  server.rs  server_tests.rs  state.rs  state_tests.rs
tcode-web/src/routes/: api.rs  api_tests.rs  auth.rs  auth_middleware.rs  auth_tests.rs  enforcement_tests.rs  mod.rs  origin_middleware.rs  session_path.rs  spa.rs  subagent_api_tests.rs  test_support.rs
tcode/config/: shortcuts.lua
tcode/lua/: tcode.lua
tcode/src/: approve_ui.rs  claude_auth.rs  cli_runtime.rs  cli_runtime_tests.rs  config.rs  config_tests.rs  config_wizard.rs  config_wizard_tests.rs  container.rs  display.rs  edit.rs  main.rs  oauth_profile_tests.rs  openai_auth.rs  permission_ui.rs  project_config.rs  project_config_tests.rs  protocol.rs  server.rs  session.rs  session_picker.rs  tool_call_display.rs  tree.rs  tree_nav.rs  tty_stdio.rs
tools/: Cargo.toml  README.md
tools/examples/: web_fetch.rs  web_search.rs
tools/src/: browser_client.rs  browser_tests.rs  file_permission.rs  file_permission_tests.rs  file_write_util.rs  lib.rs  media_util.rs  media_util_tests.rs  web_fetch.rs  write_tests.rs
tools/src/bash/: bash_tests.rs  builtin_violation_tests.rs  command_parser.rs  command_parser_tests.rs  command_permission.rs  command_permission_tests.rs  mod.rs  output_processing_tests.rs
tools/src/browser/: mod.rs
tools/src/current_time/: mod.rs
tools/src/edit/: block_anchor_replacer.rs  block_anchor_replacer_tests.rs  context_aware_replacer.rs  context_aware_replacer_tests.rs  edit_tests.rs  escape_normalized_replacer.rs  escape_normalized_replacer_tests.rs  exact_replacer.rs  indentation_flexible_replacer.rs  indentation_flexible_replacer_tests.rs  levenshtein.rs  levenshtein_tests.rs  line_trimmed_replacer.rs  mod.rs  multi_occurrence_replacer.rs  multi_occurrence_replacer_tests.rs  replace_helpers.rs  trimmed_boundary_replacer.rs  trimmed_boundary_replacer_tests.rs  whitespace_normalized_replacer.rs  whitespace_normalized_replacer_tests.rs
tools/src/glob_tool/: mod.rs
tools/src/grep_tool/: grep_tool_tests.rs  mod.rs
tools/src/js/: wait-for-idle.js
tools/src/lsp/: formatter_tests.rs  formatters.rs  mod.rs
tools/src/read/: mod.rs  read_tests.rs
tools/src/skill/: mod.rs
tools/src/web_fetch/: clean-html.js  extract-content.js  mod.rs  tests.rs
tools/src/web_search/: mod.rs
tools/src/write/: mod.rs  write_tests.rs
tree-sitter-tcode/: .gitignore  Makefile  README.md  grammar.js
tree-sitter-tcode/queries/: highlights.scm  injections.scm
tree-sitter-tcode/src/: scanner.c
