[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
