[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
llm-rs = { path = "../llm-rs" }
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
