[package]
name = "llm-rs-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
doctest = false  # Doc tests don't work well with proc-macro crates

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.10.0"
proc-macro-crate = "3"
