[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
llm-rs-macros = { path = "../llm-rs-macros" }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
chrono = "0.4"
