[package]
name = "llm-rs"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
async-stream = "0.3"
pin-project-lite = "0.2"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0"
serde-saphyr = "0.0.23"
tokio = { version = "1.51.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
llm-rs-macros = { path = "../llm-rs-macros" }
parking_lot = "0.12"
tracing = "0.1"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
