[package]
name = "lsp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs", "io-util", "process", "sync", "macros"] }
tracing = "0.1"
anyhow = "1"
parking_lot = "0.12"
url = "2"
