[package]
name = "tcode-runtime"
version.workspace = true
edition = "2024"

[dependencies]
auth = { path = "../auth" }
anyhow = "1"
bytes = "1"
browser-server = { path = "../browser-server" }
dirs = "6"
fs2 = "0.4"
futures = "0.3"
llm-rs = { path = "../llm-rs" }
lsp-client = { path = "../lsp-client" }
parking_lot = "0.12"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1"
tools = { path = "../tools" }
tracing = "0.1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
