[package]
name = "tcode-web"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
getrandom = "0.3"
llm-rs = { path = "../llm-rs" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tcode-runtime = { path = "../tcode-runtime" }
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
