[package]
name = "tcode-web"
version.workspace = true
edition = "2024"

[features]
bundled-frontend = ["dep:include_dir"]

[dependencies]
anyhow = "1"
argon2 = "0.6.0-rc.8"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
dirs = "6"
getrandom = "0.3"
include_dir = { version = "0.7", optional = true }
llm-rs = { path = "../llm-rs" }
parking_lot = "0.12"
password-hash = "0.6.1"
rpassword = "7.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tcode-runtime = { path = "../tcode-runtime" }
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util", "sync", "time"] }
tokio-stream = "0.1"
toml = "1.1"
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
