[package]
name = "tcode"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
headless_chrome = "1.0"
llm-rs = { path = "../llm-rs" }
tools = { path = "../tools" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
bytes = "1"
notify = "8.2.0"
nix = { version = "0.29", features = ["term", "signal", "fs"] }
tokio-stream = "0.1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
urlencoding = "2.1"
