[package]
name = "tcode"
version.workspace = true
edition = "2024"

[features]
bundled-frontend = ["tcode-web/bundled-frontend"]

[dependencies]
browser-server = { path = "../browser-server" }
tcode-web = { path = "../tcode-web" }
tcode-runtime = { path = "../tcode-runtime" }
dirs = "6"
auth = { path = "../auth" }
lsp-client = { path = "../lsp-client" }
llm-rs = { path = "../llm-rs" }
tools = { path = "../tools" }
toml = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures = "0.3"
bytes = "1"
notify = "8.2.0"
nix = { version = "0.31", features = ["term", "signal", "fs", "user"] }
parking_lot = "0.12"
tokio-stream = "0.1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.11"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json", "form"] }
rand = "0.10"
urlencoding = "2.1"
ratatui = "0.30"
rustyline = { version = "18", default-features = false }
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
