[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0"
llm-rs = { path = "../llm-rs" }
llm-rs-macros = { path = "../llm-rs-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
