[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
quick-xml = "0.37"
async-stream = "0.3"
browser-server = { path = "../browser-server" }
tracing = "0.1"
llm-rs = { path = "../llm-rs" }
llm-rs-macros = { path = "../llm-rs-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
tokio = { version = "1", features = ["rt", "time", "fs", "io-util"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
ignore = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
