[package]
name = "tools"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
quick-xml = "0.37"
async-stream = "0.3"
browser-server = { path = "../browser-server" }
lsp-client = { path = "../lsp-client" }
lsp-types = "0.97"
url = "2"
tracing = "0.1"
llm-rs = { path = "../llm-rs" }
llm-rs-macros = { path = "../llm-rs-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
tokio = { version = "1", features = ["rt", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
reqwest = { version = "0.13", features = ["json"] }
ignore = "0.4"
grep = "0.4"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
